[package]
edition = "2021"
name = "zyss_zip-plugin"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.6", default-features = false, features = ["napi4",'tokio_rt'] }
napi-derive = "2.16.5"
regex = "1.10.4"
zip = "2.1.2"
walkdir = "2.5.0"
fs_extra = "1.3.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
